tree_sitter_v/grammar.js
		source_file: ($) =>
			seq(
				optional($.shebang),
				optional($.module_clause),
				optional($.import_list),
				repeat(
					choice(
						seq($._top_level_declaration, optional(terminator)),
						seq($._statement, optional(terminator)),
					),
				),
			),

		_top_level_declaration: ($) =>
			choice(
				$.const_declaration,
				$.global_var_declaration,
				$.type_declaration,
				$.function_declaration,
				$.static_method_declaration,
				$.struct_declaration,
				$.enum_declaration,
				$.interface_declaration,
			),

		_expression: ($) => choice($._expression_without_blocks, $._expression_with_blocks),

		_expression_without_blocks: ($) =>
			choice(
				$.parenthesized_expression,
				$.go_expression,
				$.spawn_expression,
				$.call_expression,
				$.function_literal,
				$.reference_expression,
				$._max_group,
				$.array_creation,
				$.fixed_array_creation,
				$.unary_expression,
				$.receive_expression,
				$.binary_expression,
				$.is_expression,
				$.in_expression,
				$.index_expression,
				$.slice_expression,
				$.as_type_cast_expression,
				$.selector_expression,
				$.enum_fetch,
				$.inc_expression,
				$.dec_expression,
				$.or_block_expression,
				$.option_propagation_expression,
				$.result_propagation_expression,
			),

		or_block_expression: ($) => seq($._expression, $.or_block),

		option_propagation_expression: ($) => prec(PREC.match_arm_type, seq($._expression, '?')),

		result_propagation_expression: ($) => prec(PREC.match_arm_type, seq($._expression, '!')),

		call_expression: ($) =>
			prec.right(
				PREC.primary,
				choice(
					seq(field('function', token('json.decode')), field('arguments', $.special_argument_list)),
					seq(
						field('name', $._expression),
						optional(field('type_parameters', $.type_parameters)),
						field('arguments', $.argument_list),
					),
				),
			),

		type_parameters: ($) =>
			prec.dynamic(2, seq(token.immediate('['), comma_sep1($.plain_type), ']')),

		argument_list: ($) =>
			seq('(', choice(repeat(seq($.argument, optional(list_separator))), $.short_lambda), ')'),

		short_lambda: ($) =>
			seq('|', comma_sep($.reference_expression), '|', $._expression_without_blocks),

		argument: ($) =>
			choice($._expression, $.mutable_expression, $.keyed_element, $.spread_expression),

		type_initializer: ($) =>
			prec(
				PREC.type_initializer,
				seq(field('type', $.plain_type), field('body', $.type_initializer_body)),
			),

		type_initializer_body: ($) =>
			seq(
				'{',
				optional(
					choice(
						field('element_list', $.element_list),
						// For short struct init syntax
						field('short_element_list', $.short_element_list),
					),
				),
				'}',
			),

		keyed_element: ($) =>
			seq(
				field('key', alias($.reference_expression, $.field_name)),
				':',
				field('value', $._expression),
			),

		reference_expression: ($) => prec.left($.identifier),
		type_reference_expression: ($) => prec.left($.identifier),

		binary_expression: ($) => {
			const table = [
				[PREC.multiplicative, choice(...multiplicative_operators)],
				[PREC.additive, choice(...additive_operators)],
				[PREC.comparative, choice(...comparative_operators)],
				[PREC.and, '&&'],
				[PREC.or, '||'],
			];

			return choice(
				...table.map(([precedence, operator]) =>
					prec.left(
						Number(precedence),
						seq(
							field('left', $._expression),
							// @ts-ignore
							field('operator', operator),
							field('right', $._expression),
						),
					),
				),
			);
		},

		or_block: ($) => seq('or', field('block', $.block)),

		literal: ($) =>
			choice(
				$.int_literal,
				$.float_literal,
				$._string_literal,
				$.rune_literal,
				$.none,
				$.true,
				$.false,
				$.nil,
			),

		true: () => 'true',
		false: () => 'false',
		spread_expression: ($) => prec.right(PREC.unary, seq('...', $._expression)),

		array_creation: ($) => prec.right(PREC.multiplicative, $._array),

		_array: ($) => seq('[', repeat(seq($._expression, optional(','))), ']'),

		selector_expression: ($) =>
			prec.dynamic(
				-1,
				prec(
					PREC.primary,
					seq(
						field('operand', $._expression),
						choice('.', '?.'),
						field('field', choice($.reference_expression, $.compile_time_selector_expression)),
					),
				),
			),

		index_expression: ($) =>
			prec.dynamic(
				-1,
				prec.right(
					PREC.primary,
					seq(
						field('operand', $._expression),
						choice('[', token.immediate('['), token('#[')),
						field('index', $._expression),
						']',
					),
				),
			),

		in_expression: ($) =>
			prec.left(
				PREC.comparative,
				seq(field('left', $._expression), choice('in', '!in'), field('right', $._expression)),
			),

		match_expression: ($) =>
			seq(
				'match',
				field('condition', choice($._expression, $.mutable_expression)),
				'{',
				optional($.match_arms),
				'}',
			),

		match_arms: ($) => repeat1(choice($.match_arm, $.match_else_arm_clause)),

		match_arm: ($) => seq(field('value', $.match_expression_list), field('block', $.block)),

		match_expression_list: ($) =>
			comma_sep1(
				choice($._expression_without_blocks, $.match_arm_type, alias($._definite_range, $.range)),
			),

		match_else_arm_clause: ($) => seq('else', field('block', $.block)),

		int_literal: () => token(int_literal),

		_string_literal: ($) =>
			choice($.interpreted_string_literal, $.c_string_literal, $.raw_string_literal),

		interpreted_string_literal: ($) =>
			prec(
				1,
				choice(
					seq(
						"'",
						repeat(
							choice(
								token.immediate(prec.right(1, /[^'\\$]+/)),
								$.escape_sequence,
								$.string_interpolation,
							),
						),
						"'",
					),
					seq(
						'"',
						repeat(
							choice(
								token.immediate(prec.right(1, /[^"\\$]+/)),
								$.escape_sequence,
								$.string_interpolation,
							),
						),
						'"',
					),
				),
			),

		string_interpolation: ($) =>
			seq(
				alias('${', $.interpolation_opening),
				choice(
					repeat(alias($._expression, $.interpolation_expression)),
					seq(alias($._expression, $.interpolation_expression), $.format_specifier),
				),
				alias('}', $.interpolation_closing),
			),

		identifier: () =>
			token(
				seq(
					optional('@'),
					optional('$'),
					optional('C.'),
					optional('JS.'),
					choice(unicode_letter, '_'),
					repeat(choice(letter, unicode_digit)),
				),
			),

		mutability_modifiers: () =>
			prec.left(
				PREC.resolve,
				choice(seq('mut', optional('static'), optional('volatile')), 'shared'),
			),

		mutable_expression: ($) => prec(PREC.resolve, seq($.mutability_modifiers, $._expression)),

		plain_type: ($) =>
			prec.right(
				PREC.primary,
				choice($._plain_type_without_special, $.option_type, $.result_type, $.multi_return_type),
			),

		_plain_type_without_special: ($) =>
			prec.right(
				PREC.primary,
				choice(
					$.type_reference_expression,
					$.qualified_type,
					$.pointer_type,
					$.wrong_pointer_type,
					$.array_type,
					$.fixed_array_type,
					$.function_type,
					$.generic_type,
					$.map_type,
					$.channel_type,
					$.shared_type,
					$.thread_type,
					$.atomic_type,
					$.anon_struct_type,
				),
			),

		array_type: ($) =>
			prec(PREC.primary, prec.dynamic(2, seq('[', ']', field('element', $.plain_type)))),

		map_type: ($) => seq('map[', field('key', $.plain_type), ']', field('value', $.plain_type)),

		_statement_list: ($) =>
			choice(
				seq(
					$._statement,
					repeat(seq(terminator, $._statement)),
					optional(
						seq(terminator, optional(alias($.empty_labeled_statement, $.labeled_statement))),
					),
				),
				alias($.empty_labeled_statement, $.labeled_statement),
			),

		_statement: ($) =>
			choice(
				$.simple_statement,
				$.assert_statement,
				$.continue_statement,
				$.break_statement,
				$.return_statement,
				$.asm_statement,
				$.goto_statement,
				$.labeled_statement,
				$.defer_statement,
				$.for_statement,
				$.compile_time_for_statement,
				$.send_statement,
				$.block,
				$.hash_statement,
				$.append_statement,
			),

		simple_statement: ($) =>
			choice(
				$.var_declaration,
				$._expression,
				$.assignment_statement,
				alias($.strictly_expression_list, $.expression_list),
			),

		block: ($) => seq('{', optional($._statement_list), '}'),

		_definite_range: ($) =>
			prec(
				PREC.multiplicative,
				seq(
					field('start', $._expression),
					field('operator', choice('..', '...')),
					field('end', $._expression),
				),
			),

		range: ($) =>
			prec(
				PREC.multiplicative,
				seq(
					optional(field('start', $._expression)),
					field('operator', '..'),
					optional(field('end', $._expression)),
				),
			),
